# gojira-frontend/src/api/models/index.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
-export * from './ProjectRequest.ts';
-export * from './ProjectResponse.ts';
-export * from './SignIn200Response.ts';
-export * from './TicketRequest.ts';
-export * from './TicketResponse.ts';
+export * from './ProjectRequest';
+export * from './ProjectResponse';
+export * from './SignIn200Response';
+export * from './TicketRequest';
+export * from './TicketResponse';
